--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "dependencies": {
     "@babel/polyfill": "^7.12.1",
+    "aws-sdk": "^2.1062.0",
     "dotenv": "^14.2.0",
     "mongoose": "^6.1.7",
     "scrape-it": "^5.3.2"
