update mongo url

--- a/.env
+++ b/.env
@@ -7,7 +7,7 @@ AWS_ACCESS="XXXXX"
 AWS_SECRET="ZZZZZ"
 
 # Mongo DB
-MONGODB_URI="mongodb://localhost:27017/whales-assets-spy"
+MONGODB_URI="mongodb://127.0.0.1:27017/whales-assets-spy"
 
 # BTC
 BTC_URL="https://bitinfocharts.com/bitcoin/address/"
