--- a/.env
+++ b/.env
@@ -1,20 +1,19 @@
 # App
 REFRESH_RATE_MIN=60
-EMAIL_FROM="Crypto Alert <crypto@xxxxxx.com>"
+EMAIL_FROM="Crypto Alert <crypto@*****.com>"
 
 # AWS
-AWS_ACCESS="XXXXX"
-AWS_SECRET="ZZZZZ"
+AWS_ACCESS="*****"
+AWS_SECRET="*****"
 
 # Mongo DB
 MONGODB_URI="mongodb://127.0.0.1:27017/whales-assets-spy"
 
 # BTC
 BTC_URL="https://bitinfocharts.com/bitcoin/address/"
-BTC_ADDRESSES="bc1qyrw8thfgtr7fjy8tzlx5rvnvdmttn8z6kkejym"
-BTC_PHONES="+34XXXXXXXXX"
-BTC_EMAILS="xxxxxx@xxxxx.com,yyyyyyy@xxxxx.com"
+BTC_ADDRESSES="1P5ZEDWTKTFGxQjZphgWPQUpe554WKDfHQ"
+BTC_PHONES="+34*****"
+BTC_EMAILS="*****@*****.com"
 
 # DASH
 # To add...
-# 1P5ZEDWTKTFGxQjZphgWPQUpe554WKDfHQ,
