add log service

--- a/.env
+++ b/.env
@@ -1,10 +1,12 @@
 # App
-REFRESH_RATE_MIN=60
-EMAIL_FROM="Crypto Alert <crypto@*****.com>"
+REFRESH_RATE_MIN=0.3
+LOG=true
+MAX_ALERTS_ADDR_TRANSACT=1
+EMAIL_FROM="Whales Alert <crypto@gate2fly.com>"
 
 # AWS
-AWS_ACCESS="*****"
-AWS_SECRET="*****"
+AWS_ACCESS="AKIAINRPAZ7TTTCN6LCQ"
+AWS_SECRET="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"
 
 # Mongo DB
 MONGODB_URI="mongodb://127.0.0.1:27017/whales-assets-spy"
@@ -13,7 +15,7 @@ MONGODB_URI="mongodb://127.0.0.1:27017/whales-assets-spy"
 BTC_URL="https://bitinfocharts.com/bitcoin/address/"
 BTC_ADDRESSES="1P5ZEDWTKTFGxQjZphgWPQUpe554WKDfHQ"
 BTC_PHONES="+34*****"
-BTC_EMAILS="*****@*****.com"
+BTC_EMAILS="dbindea@gmail.com"
 
 # DASH
 # To add...
