--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@babel/polyfill": "^7.12.1",
     "aws-sdk": "^2.1062.0",
     "dotenv": "^14.2.0",
+    "moment": "^2.29.1",
     "mongoose": "^6.1.7",
     "puppeteer": "^13.1.2",
     "scrape-it": "^5.3.2"
