--- a/.env
+++ b/.env
@@ -1,21 +1,21 @@
 # App
-REFRESH_RATE_MIN=0.3
-LOG=true
-MAX_ALERTS_ADDR_TRANSACT=1
-EMAIL_FROM="Whales Alert <crypto@gate2fly.com>"
+REFRESH_RATE_MIN=60
+MAX_ALERTS_ADDR_TRANSACT=5
+LOG=false
 
 # AWS
-AWS_ACCESS="AKIAINRPAZ7TTTCN6LCQ"
-AWS_SECRET="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"
+EMAIL_FROM="Whales Alert <whales.alert@*****.com>"
+AWS_ACCESS="*****"
+AWS_SECRET="*****"
 
 # Mongo DB
 MONGODB_URI="mongodb://127.0.0.1:27017/whales-assets-spy"
 
 # BTC
 BTC_URL="https://bitinfocharts.com/bitcoin/address/"
-BTC_ADDRESSES="1P5ZEDWTKTFGxQjZphgWPQUpe554WKDfHQ"
+BTC_ADDRESSES="*****"
 BTC_PHONES="+34*****"
-BTC_EMAILS="dbindea@gmail.com"
+BTC_EMAILS="*****@*****.com"
 
 # DASH
 # To add...
