update git ignore

--- a/.env
+++ b/.env
@@ -4,18 +4,17 @@ MAX_ALERTS_ADDR_TRANSACT=5
 LOG=false
 
 # AWS
-EMAIL_FROM="Whales Alert <whales.alert@*****.com>"
-AWS_ACCESS="*****"
-AWS_SECRET="*****"
+EMAIL_FROM="Whales Alert <whales.alert@gate2fly.com>"
+
 
 # Mongo DB
 MONGODB_URI="mongodb://127.0.0.1:27017/whales-assets-spy"
 
 # BTC
 BTC_URL="https://bitinfocharts.com/bitcoin/address/"
-BTC_ADDRESSES="*****"
-BTC_PHONES="+34*****"
-BTC_EMAILS="*****@*****.com"
+BTC_ADDRESSES="1P5ZEDWTKTFGxQjZphgWPQUpe554WKDfHQ"
+BTC_PHONES="+34622405945"
+BTC_EMAILS="dbindea@gmail.com"
 
 # DASH
 # To add...
