--- a/.env
+++ b/.env
@@ -3,18 +3,20 @@ REFRESH_RATE_MIN=60
 MAX_ALERTS_ADDR_TRANSACT=5
 LOG=false
 
-# AWS
-EMAIL_FROM="Whales Alert <whales.alert@gate2fly.com>"
 
+# AWS
+EMAIL_FROM="Whales Alert <whales.alert@*****.com>"
+AWS_ACCESS="*****"
+AWS_SECRET="*****"
 
 # Mongo DB
 MONGODB_URI="mongodb://127.0.0.1:27017/whales-assets-spy"
 
 # BTC
 BTC_URL="https://bitinfocharts.com/bitcoin/address/"
-BTC_ADDRESSES="1P5ZEDWTKTFGxQjZphgWPQUpe554WKDfHQ"
-BTC_PHONES="+34622405945"
-BTC_EMAILS="dbindea@gmail.com"
+BTC_ADDRESSES="*****"
+BTC_PHONES="+34*****"
+BTC_EMAILS="*****@*****.com"
 
 # DASH
 # To add...
