--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "clean": "rimraf dist",
     "build": "npm run clean && babel src -d dist --source-maps",
     "start": "nodemon src/index.js --exec babel-node",
+    "debug": "nodemon --inspect src/index.js --exec babel-node",
     "start:prod": "node dist/index.js",
     "format": "prettier --write \"src/**/*.js\""
   },
